--- a/sample-vue-init-repo/package.json
+++ b/sample-vue-init-repo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mitmproxy-llm-better-view-tampermonkey-script",
-  "private": false,
-  "version": "0.0.10",
+  "name": "mitmweb-llm-better-view-test",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,14 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lit": "^3.3.2",
-    "lit-html": "^3.3.2",
     "vue": "^3.5.19"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "marked": "^15.0.12",
-    "typescript": "^5.7.2",
+    "typescript": "^5.9.2",
     "vite": "^7.1.3",
     "vite-plugin-monkey": "^7.1.1",
     "vue-tsc": "^3.0.6"
