--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@vueuse/core": "^14.2.0",
     "lit": "^3.3.2",
     "lit-html": "^3.3.2",
+    "pinia": "^3.0.4",
     "vue": "^3.5.19",
     "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
+    "@types/node": "^25.2.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "marked": "^15.0.12",
     "typescript": "^5.7.2",
