add dist.js release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist.js
+          asset_path:  ./dist/mtimweb-llm-better-view.js
           asset_name: dist-${{ steps.get_tag.outputs.TAG_NAME }}.js
           asset_content_type: application/javascript
