--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,5 +58,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path:  ./dist/mtimweb-llm-better-view.js
-          asset_name: dist-${{ steps.get_tag.outputs.TAG_NAME }}.js
+          asset_name: dist-latest.js
           asset_content_type: application/javascript
